# CourseWork

./: CMakeLists.txt  FORSYTHE.h  main.cpp  matrix.cpp  matrix.h  quanc8.cpp  quanc8.h  rkf45.cpp  rkf45.h  zeroin.cpp  zeroin.h
